# BaseGraphicProject

./: .gitignore  CMakeLists.txt
src/Application/: CMakeLists.txt  application.cpp  application.h  utils.cpp  utils.h
src/Exercises/Backface/: CMakeLists.txt  app.cpp
src/Exercises/Colors/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/Exercises/Colors/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/Indices/: CMakeLists.txt  app.cpp
src/Exercises/Indices/shaders/: base_fs.glsl
src/Exercises/PVM/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/Exercises/PVM/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/Phong/: CMakeLists.txt  app.cpp  app.h  camera.h  camera_controler.h  main.cpp  pyramid.cpp  quad.cpp  quad.h  rotation.h
src/Exercises/Phong/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/Piramidka/: CMakeLists.txt  app.cpp
src/Exercises/Rozmiar_Okna/: CMakeLists.txt  app.cpp  app.h
src/Exercises/Rozmiar_Okna/shaders/: base_vs.glsl
src/Exercises/RuchKamery/: CMakeLists.txt  Camera.h  app.cpp  app.h  camera_controler.h  rotation.h
src/Exercises/RuchKamery/shaders/: base_fs.glsl
src/Exercises/Textura/: CMakeLists.txt  Camera.h  app.cpp  app.h  pyramid.cpp  pyramid.h  rotation.h
src/Exercises/Textura/shaders/: base_fs.glsl  base_vs.glsl
src/Exercises/Triangle/: CMakeLists.txt  app.cpp  main.cpp
src/Exercises/Uniforms/: CMakeLists.txt  app.cpp
src/Exercises/Uniforms/shaders/: base_fs.glsl
src/Exercises/Zoom/: CMakeLists.txt  Camera.h  MEGA-RECOVERYKEY.txt  app.cpp  app.h
src/Exercises/Zoom/shaders/: base_vs.glsl
